[package]
name = "memstrap"
version = "0.1.0"
edition = "2021"
description = "High-performance CLI tool for memory forensics string extraction"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rayon = "1.7"
memmap2 = "0.9"
csv = "1.3"
regex = "1.10"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
num_cpus = "1.16"
encoding_rs = "0.8.35"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.8"
